fix: added scroll to address text overflow

--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,7 @@ main {
   display: flex;
   justify-content: center;
   gap: 10px;
+  overflow-y: scroll;
 }
 
 .banner-icon {
